--- a/src/App.css
+++ b/src/App.css
@@ -1,137 +1,41 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  background-image: linear-gradient(120deg, #5948f3 0%, #85affd 100%);
-  color: white;
-  font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-  min-height: 100vh;
-}
-header {
-  font-size: 2rem;
+.wel-text{
+    color: rgb(143, 139, 139);
+    border-radius: 2rem;
+    padding: 2rem; 
+    display: flex;
+    justify-content:center;
+    font-size: 1.5rem;
+    font-family:sans-serif
 }
 
-header,
-form {
-  min-height: 20vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-form input,
-form button {
-  padding: 0.5rem;
-  font-size: 1.5rem;
-  border: none;
-  background: rgb(185, 204, 238);
-}
-form button {
-  color: #6347ff;
-  background: #f7fffe;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-form button:hover {
-  background: #7e47ff;
-  color: white;
-}
-.todo-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.linkss{
+    color: rgb(14, 13, 13);
+    padding: 2rem; 
+    font-size: 1rem;
+    font-family:cursive;
 }
 
-.todo-list {
-  min-width: 30%;
-  list-style: none;
-}
+.card{
+    color: white;
+    margin-right: 20px;
+    position: fixed;
+    top: 1rem;
+    left: 2rem;
+  }
 
-.todo {
-  margin: 0.5rem;
-  background: white;
-  font-size: 1.5rem;
-  color: rgb(8, 8, 46);
-  display: flex;
-  justify-content: space-between;
-  align-items:center;
-  transition: all 1s ease;
-}
-.filter-todo {
-  padding: 1rem;
-}
-.todo li {
-  flex: 1;
-}
-
-.trash-btn,
-.complete-btn {
-  background: #ff477e;
-  color: white;
-  border: none;
-  padding: 1rem;
-  cursor: pointer;
-  font-size: 1rem;
-}
-.complete-btn {
-  background: rgb(11, 212, 162);
-}
-.todo-item {
-  padding: 0rem 0.5rem;
-}
-
-.fa-trash,
-.fa-check {
-  pointer-events: none;
-}
-
-.fall {
-  transform: translateY(10rem) rotateZ(20deg);
-  opacity: 0;
-}
-
-.completed {
-  text-decoration: line-through;
-  opacity: 0.5;
-}
-
-/*CUSTOM SELECTOR */
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  outline: 0;
-  box-shadow: none;
-  border: 0 !important;
-  background-image: none;
-}
-
-/* Custom Select */
-.select {
-  margin: 1rem;
-  position: relative;
-  overflow: hidden;
-}
-select {
-  color: #4a47ff;
-  font-family: "Poppins", sans-serif;
-  cursor: pointer;
-  width: 12rem;
-}
-/* Arrow */
-.select::after {
-  content: "\25BC";
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 1rem;
-  background: #4753ff;
-  cursor: pointer;
-  pointer-events: none;
-}
-/* Transition */
-.select:hover::after {
-  transform: scale(1.5);
+.cardv{
+    color: white;
+    margin-left: 20px;
+    position: fixed;
+    top: 1rem;
+    right: 2rem;
+  }
+.image{
+    position: fixed;
+    bottom: 1rem;
+    right: 44rem;
+    border-radius: 22px;
+    padding: 20px;
+    width: 150px;
+    border-radius: 50%;
 }
